gcc/testsuite/rust/rustc/ui/traits/trait-upcasting/multiple_supertrait_upcastable_dg.rs
#![feature(multiple_supertrait_upcastable)]
#![deny(multiple_supertrait_upcastable)]

trait A {}
trait B {}

trait C: A + B {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

